fix: playnext component UI is way too low

--- a/customComponents/src/components/playerNextComponent/index.css
+++ b/customComponents/src/components/playerNextComponent/index.css
@@ -4,8 +4,8 @@
     background: url(./next.png) center no-repeat;
     background-size: contain;
     float: left;
-    margin-left: 15px;
-    margin-top: 12px;
+    margin-left: 10px;
+    margin-top: 8px;
     cursor: pointer;
     position: relative;
 }
